# storage/api-docs/api-docs.json
@@ -5,6 +5,44 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/categories/{category_id}/breadcrumbs": {
+            "get": {
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Хлебные крошки",
+                "description": "Возвращает хлебные крошки категории",
+                "operationId": "breadcrumbs",
+                "parameters": [
+                    {
+                        "name": "category_id",
+                        "in": "path",
+                        "description": "ID of category",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation"
+                    },
+                    "400": {
+                        "description": "Invalid ID supplier"
+                    },
+                    "404": {
+                        "description": "Product not found"
+                    }
+                },
+                "security": [
+                    {
+                        "api_key": []
+                    }
+                ]
+            }
+        },
         "/api/products/{product_id}": {
             "get": {
                 "tags": [
